--- a/magecity/magecity.less
+++ b/magecity/magecity.less
@@ -215,6 +215,17 @@
   .bp(grass-dirt-patch-2-1x2, @size, 3, 35, 1, 1);
   .bp(grass-dirt-patch-2-2x2, @size, 4, 35, 1, 1);
   .bp(grass-dirt-patch-2-3x2, @size, 5, 35, 1, 1);
+
+  .bp(grass-smash-1, @size, 2, 36, 1, 1);
+  .bp(grass-smash-2, @size, 3, 36, 1, 1);
+  .bp(grass-cherries-1, @size, 4, 36, 1, 1);
+  .bp(grass-cherries-2, @size, 5, 36, 1, 1);
+
+  .bp(grass-shadow-bottom-left, @size, 6, 35, 1, 1);
+  .bp(grass-shadow-overlay-bottom-left, @size, 6, 36, 1, 1);
+  .bp(grass-shadow-overlay-top-left, @size, 7, 35, 1, 1);
+  .bp(grass-shadow-overlay-top-left-short, @size, 7, 36, 1, 1);
+  .bp(grass-shadow-overlay-left, @size, 7, 37, 1, 1);
 }
 
 .magecity {
