--- a/magecity/magecity.css
+++ b/magecity/magecity.css
@@ -1419,6 +1419,78 @@
 .magecity.grass-dirt-patch-2-3x2.trans:after {
   content: '1x1';
 }
+.magecity.grass-smash-1 {
+  width: 32px;
+  height: 32px;
+  background-position: -64px -1152px;
+}
+.magecity.grass-smash-1.trans:after {
+  content: '1x1';
+}
+.magecity.grass-smash-2 {
+  width: 32px;
+  height: 32px;
+  background-position: -96px -1152px;
+}
+.magecity.grass-smash-2.trans:after {
+  content: '1x1';
+}
+.magecity.grass-cherries-1 {
+  width: 32px;
+  height: 32px;
+  background-position: -128px -1152px;
+}
+.magecity.grass-cherries-1.trans:after {
+  content: '1x1';
+}
+.magecity.grass-cherries-2 {
+  width: 32px;
+  height: 32px;
+  background-position: -160px -1152px;
+}
+.magecity.grass-cherries-2.trans:after {
+  content: '1x1';
+}
+.magecity.grass-shadow-bottom-left {
+  width: 32px;
+  height: 32px;
+  background-position: -192px -1120px;
+}
+.magecity.grass-shadow-bottom-left.trans:after {
+  content: '1x1';
+}
+.magecity.grass-shadow-overlay-bottom-left {
+  width: 32px;
+  height: 32px;
+  background-position: -192px -1152px;
+}
+.magecity.grass-shadow-overlay-bottom-left.trans:after {
+  content: '1x1';
+}
+.magecity.grass-shadow-overlay-top-left {
+  width: 32px;
+  height: 32px;
+  background-position: -224px -1120px;
+}
+.magecity.grass-shadow-overlay-top-left.trans:after {
+  content: '1x1';
+}
+.magecity.grass-shadow-overlay-top-left-short {
+  width: 32px;
+  height: 32px;
+  background-position: -224px -1152px;
+}
+.magecity.grass-shadow-overlay-top-left-short.trans:after {
+  content: '1x1';
+}
+.magecity.grass-shadow-overlay-left {
+  width: 32px;
+  height: 32px;
+  background-position: -224px -1184px;
+}
+.magecity.grass-shadow-overlay-left.trans:after {
+  content: '1x1';
+}
 .magecity.x64 {
   -webkit-background-size: 512px 2904px;
   -moz-background-size: 512px 2904px;
@@ -2816,5 +2888,77 @@
   background-position: -320px -2240px;
 }
 .magecity.x64.grass-dirt-patch-2-3x2.trans:after {
+  content: '1x1';
+}
+.magecity.x64.grass-smash-1 {
+  width: 64px;
+  height: 64px;
+  background-position: -128px -2304px;
+}
+.magecity.x64.grass-smash-1.trans:after {
+  content: '1x1';
+}
+.magecity.x64.grass-smash-2 {
+  width: 64px;
+  height: 64px;
+  background-position: -192px -2304px;
+}
+.magecity.x64.grass-smash-2.trans:after {
+  content: '1x1';
+}
+.magecity.x64.grass-cherries-1 {
+  width: 64px;
+  height: 64px;
+  background-position: -256px -2304px;
+}
+.magecity.x64.grass-cherries-1.trans:after {
+  content: '1x1';
+}
+.magecity.x64.grass-cherries-2 {
+  width: 64px;
+  height: 64px;
+  background-position: -320px -2304px;
+}
+.magecity.x64.grass-cherries-2.trans:after {
+  content: '1x1';
+}
+.magecity.x64.grass-shadow-bottom-left {
+  width: 64px;
+  height: 64px;
+  background-position: -384px -2240px;
+}
+.magecity.x64.grass-shadow-bottom-left.trans:after {
+  content: '1x1';
+}
+.magecity.x64.grass-shadow-overlay-bottom-left {
+  width: 64px;
+  height: 64px;
+  background-position: -384px -2304px;
+}
+.magecity.x64.grass-shadow-overlay-bottom-left.trans:after {
+  content: '1x1';
+}
+.magecity.x64.grass-shadow-overlay-top-left {
+  width: 64px;
+  height: 64px;
+  background-position: -448px -2240px;
+}
+.magecity.x64.grass-shadow-overlay-top-left.trans:after {
+  content: '1x1';
+}
+.magecity.x64.grass-shadow-overlay-top-left-short {
+  width: 64px;
+  height: 64px;
+  background-position: -448px -2304px;
+}
+.magecity.x64.grass-shadow-overlay-top-left-short.trans:after {
+  content: '1x1';
+}
+.magecity.x64.grass-shadow-overlay-left {
+  width: 64px;
+  height: 64px;
+  background-position: -448px -2368px;
+}
+.magecity.x64.grass-shadow-overlay-left.trans:after {
   content: '1x1';
 }
