--- a/magecity/magecity.less
+++ b/magecity/magecity.less
@@ -198,6 +198,13 @@
   .bp(leaves-4, @size, 6, 34, 1, 1);
   .bp(leaves-5, @size, 7, 32, 1, 1);
   .bp(leaves-5-1, @size, 7, 34, 1, 1);
+  .bp(pumpkin--grass, @size, 6, 32, 1, 1, 0, 0, 1, 1);
+  .bp(pumpkins--grass, @size, 6, 33, 1, 1, 0, 0, 1, 1);
+  .bp(leaves-2--grass, @size, 5, 33, 1, 1, 0, 0, 1, 1);
+  .bp(leaves-3--grass, @size, 7, 33, 1, 1, 0, 0, 1, 1);
+  .bp(leaves-4--grass, @size, 6, 34, 1, 1, 0, 0, 1, 1);
+  .bp(leaves-5--grass, @size, 7, 32, 1, 1, 0, 0, 1, 1);
+  .bp(leaves-5-1--grass, @size, 7, 34, 1, 1, 0, 0, 1, 1);
 
   .bp(grass-dirt-patch-1-0x0, @size, 0, 33, 1, 1);
   .bp(grass-dirt-patch-1-1x0, @size, 1, 33, 1, 1);
