--- a/magecity/magecity.css
+++ b/magecity/magecity.css
@@ -1299,60 +1299,60 @@
 .magecity.leaves-5-1.trans:after {
   content: '1x1';
 }
-.magecity.double.pumpkin--grass {
+.magecity.double.pumpkin_grass {
   width: 32px;
   height: 32px;
   background-position: -192px -1024px, 0px 0px;
 }
-.magecity.double.pumpkin--grass.trans:after {
+.magecity.double.pumpkin_grass.trans:after {
   content: '1x1';
 }
-.magecity.double.pumpkins--grass {
+.magecity.double.pumpkins_grass {
   width: 32px;
   height: 32px;
   background-position: -192px -1056px, 0px 0px;
 }
-.magecity.double.pumpkins--grass.trans:after {
+.magecity.double.pumpkins_grass.trans:after {
   content: '1x1';
 }
-.magecity.double.leaves-2--grass {
+.magecity.double.leaves-2_grass {
   width: 32px;
   height: 32px;
   background-position: -160px -1056px, 0px 0px;
 }
-.magecity.double.leaves-2--grass.trans:after {
+.magecity.double.leaves-2_grass.trans:after {
   content: '1x1';
 }
-.magecity.double.leaves-3--grass {
+.magecity.double.leaves-3_grass {
   width: 32px;
   height: 32px;
   background-position: -224px -1056px, 0px 0px;
 }
-.magecity.double.leaves-3--grass.trans:after {
+.magecity.double.leaves-3_grass.trans:after {
   content: '1x1';
 }
-.magecity.double.leaves-4--grass {
+.magecity.double.leaves-4_grass {
   width: 32px;
   height: 32px;
   background-position: -192px -1088px, 0px 0px;
 }
-.magecity.double.leaves-4--grass.trans:after {
+.magecity.double.leaves-4_grass.trans:after {
   content: '1x1';
 }
-.magecity.double.leaves-5--grass {
+.magecity.double.leaves-5_grass {
   width: 32px;
   height: 32px;
   background-position: -224px -1024px, 0px 0px;
 }
-.magecity.double.leaves-5--grass.trans:after {
+.magecity.double.leaves-5_grass.trans:after {
   content: '1x1';
 }
-.magecity.double.leaves-5-1--grass {
+.magecity.double.leaves-5-1_grass {
   width: 32px;
   height: 32px;
   background-position: -224px -1088px, 0px 0px;
 }
-.magecity.double.leaves-5-1--grass.trans:after {
+.magecity.double.leaves-5-1_grass.trans:after {
   content: '1x1';
 }
 .magecity.grass-dirt-patch-1-0x0 {
@@ -2826,60 +2826,60 @@
 .magecity.x64.leaves-5-1.trans:after {
   content: '1x1';
 }
-.magecity.x64.double.pumpkin--grass {
+.magecity.x64.double.pumpkin_grass {
   width: 64px;
   height: 64px;
   background-position: -384px -2048px, 0px 0px;
 }
-.magecity.x64.double.pumpkin--grass.trans:after {
+.magecity.x64.double.pumpkin_grass.trans:after {
   content: '1x1';
 }
-.magecity.x64.double.pumpkins--grass {
+.magecity.x64.double.pumpkins_grass {
   width: 64px;
   height: 64px;
   background-position: -384px -2112px, 0px 0px;
 }
-.magecity.x64.double.pumpkins--grass.trans:after {
+.magecity.x64.double.pumpkins_grass.trans:after {
   content: '1x1';
 }
-.magecity.x64.double.leaves-2--grass {
+.magecity.x64.double.leaves-2_grass {
   width: 64px;
   height: 64px;
   background-position: -320px -2112px, 0px 0px;
 }
-.magecity.x64.double.leaves-2--grass.trans:after {
+.magecity.x64.double.leaves-2_grass.trans:after {
   content: '1x1';
 }
-.magecity.x64.double.leaves-3--grass {
+.magecity.x64.double.leaves-3_grass {
   width: 64px;
   height: 64px;
   background-position: -448px -2112px, 0px 0px;
 }
-.magecity.x64.double.leaves-3--grass.trans:after {
+.magecity.x64.double.leaves-3_grass.trans:after {
   content: '1x1';
 }
-.magecity.x64.double.leaves-4--grass {
+.magecity.x64.double.leaves-4_grass {
   width: 64px;
   height: 64px;
   background-position: -384px -2176px, 0px 0px;
 }
-.magecity.x64.double.leaves-4--grass.trans:after {
+.magecity.x64.double.leaves-4_grass.trans:after {
   content: '1x1';
 }
-.magecity.x64.double.leaves-5--grass {
+.magecity.x64.double.leaves-5_grass {
   width: 64px;
   height: 64px;
   background-position: -448px -2048px, 0px 0px;
 }
-.magecity.x64.double.leaves-5--grass.trans:after {
+.magecity.x64.double.leaves-5_grass.trans:after {
   content: '1x1';
 }
-.magecity.x64.double.leaves-5-1--grass {
+.magecity.x64.double.leaves-5-1_grass {
   width: 64px;
   height: 64px;
   background-position: -448px -2176px, 0px 0px;
 }
-.magecity.x64.double.leaves-5-1--grass.trans:after {
+.magecity.x64.double.leaves-5-1_grass.trans:after {
   content: '1x1';
 }
 .magecity.x64.grass-dirt-patch-1-0x0 {
