--- a/magecity/magecity.less
+++ b/magecity/magecity.less
@@ -233,6 +233,13 @@
   .bp(grass-shadow-overlay-top-left, @size, 7, 35, 1, 1);
   .bp(grass-shadow-overlay-top-left-short, @size, 7, 36, 1, 1);
   .bp(grass-shadow-overlay-left, @size, 7, 37, 1, 1);
+
+  .bp(brick-shadow-top-left-corner, @size, 0, 35, 1, 1);
+  .bp(brick-shadow-top-left-corner-dark, @size, 1, 35, 1, 1);
+  .bp(brick-shadow-left-edge, @size, 0, 36, 1, 1);
+  .bp(brick-shadow-left-edge-dark, @size, 1, 36, 1, 1);
+  .bp(brick-shadow-left-edge-grass, @size, 0, 37, 1, 1);
+  .bp(brick-shadow-left-edge-grass-dark, @size, 1, 37, 1, 1);
 }
 
 .magecity {
