--- a/magecity/magecity.less
+++ b/magecity/magecity.less
@@ -244,6 +244,8 @@
   .bp(brick-shadow-left-edge-dark, @size, 1, 36, 1, 1);
   .bp(brick-shadow-left-edge-grass, @size, 0, 37, 1, 1);
   .bp(brick-shadow-left-edge-grass-dark, @size, 1, 37, 1, 1);
+
+  .bp(doorway, @size, 6, 40, 1, 2);
 }
 
 .magecity {
