--- a/magecity/magecity.css
+++ b/magecity/magecity.css
@@ -1626,6 +1626,34 @@
 .magecity.doorway.trans:after {
   content: '1x2';
 }
+.magecity.doorway-down-stone {
+  z-index: 0;
+  width: 32px;
+  height: 32px;
+  background-position: -128px -1376px;
+  -webkit-transform: translate(0px, 0px);
+  -moz-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  -o-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+}
+.magecity.doorway-down-stone.trans:after {
+  content: '1x1';
+}
+.magecity.doorway-down-cobble-stone {
+  z-index: 0;
+  width: 32px;
+  height: 32px;
+  background-position: -160px -1376px;
+  -webkit-transform: translate(0px, 0px);
+  -moz-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  -o-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+}
+.magecity.doorway-down-cobble-stone.trans:after {
+  content: '1x1';
+}
 .magecity.x64 {
   -webkit-background-size: 512px 2904px;
   -moz-background-size: 512px 2904px;
@@ -3226,6 +3254,34 @@
 }
 .magecity.x64.doorway.trans:after {
   content: '1x2';
+}
+.magecity.x64.doorway-down-stone {
+  z-index: 0;
+  width: 64px;
+  height: 64px;
+  background-position: -256px -2752px;
+  -webkit-transform: translate(0px, 0px);
+  -moz-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  -o-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+}
+.magecity.x64.doorway-down-stone.trans:after {
+  content: '1x1';
+}
+.magecity.x64.doorway-down-cobble-stone {
+  z-index: 0;
+  width: 64px;
+  height: 64px;
+  background-position: -320px -2752px;
+  -webkit-transform: translate(0px, 0px);
+  -moz-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  -o-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+}
+.magecity.x64.doorway-down-cobble-stone.trans:after {
+  content: '1x1';
 }
 .x64 .magecity {
   background-image: url(magecity_0.png);
@@ -4836,4 +4892,32 @@
 }
 .x64 .magecity.doorway.trans:after {
   content: '1x2';
+}
+.x64 .magecity.doorway-down-stone {
+  z-index: 0;
+  width: 64px;
+  height: 64px;
+  background-position: -256px -2752px;
+  -webkit-transform: translate(0px, 0px);
+  -moz-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  -o-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+}
+.x64 .magecity.doorway-down-stone.trans:after {
+  content: '1x1';
+}
+.x64 .magecity.doorway-down-cobble-stone {
+  z-index: 0;
+  width: 64px;
+  height: 64px;
+  background-position: -320px -2752px;
+  -webkit-transform: translate(0px, 0px);
+  -moz-transform: translate(0px, 0px);
+  -ms-transform: translate(0px, 0px);
+  -o-transform: translate(0px, 0px);
+  transform: translate(0px, 0px);
+}
+.x64 .magecity.doorway-down-cobble-stone.trans:after {
+  content: '1x1';
 }
