--- a/magecity/magecity.less
+++ b/magecity/magecity.less
@@ -211,6 +211,11 @@
   .bp(leaves-5_grass, @size, 7, 32, 1, 1, 0, 0, 1, 1);
   .bp(leaves-5-1_grass, @size, 7, 34, 1, 1, 0, 0, 1, 1);
 
+  .bp(leaves-2_grass-shadow-top-left, @size, 5, 33, 1, 1, 7, 26, 1, 1);
+  .bp(leaves-2_grass-shadow-top-left-short, @size, 5, 33, 1, 1, 7, 27, 1, 1);
+  .bp(leaves-2_grass-shadow-left, @size, 5, 33, 1, 1, 7, 28, 1, 1);
+  .bp(leaves-2_grass-shadow-bottom-left, @size, 5, 33, 1, 1, 6, 35, 1, 1);
+
   .bp(grass-dirt-patch-1-0x0, @size, 0, 33, 1, 1);
   .bp(grass-dirt-patch-1-1x0, @size, 1, 33, 1, 1);
   .bp(grass-dirt-patch-1-0x1, @size, 0, 34, 1, 1);
