--- a/magecity/magecity.less
+++ b/magecity/magecity.less
@@ -252,8 +252,10 @@
   .bp(brick-shadow-left-edge-grass-dark, @size, 1, 37, 1, 1);
 
   .bpi(doorway, @size, 6, 40, 1, 2, 0, 0, -1);
-  .bpi(doorway-down-stone, @size, 4, 43, 1, 1, 0, 0, 0);
-  .bpi(doorway-down-cobble-stone, @size, 5, 43, 1, 1, 0, 0, 0);
+  .bpi(doorway-up, @size, 4, 43, 1, 1, 0, 0, 0);
+  .bpi(doorway-down, @size, 3, 43, 1, 1, 0, 0, 0);
+  .bpi(doorway-left, @size, 3, 44, 1, 1, 0, 0, 0);
+  .bpi(doorway-right, @size, 4, 44, 1, 1, 0, 0, 0);
 }
 
 .magecity {
